# LightLink

./: .env  PROJECT_SUMMARY.md  README.md  convert_to_onnx.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_dataset_verification.py  test_pino_model.py  test_simulation_demo.py
docs/: README.md
fsoc_pino/: __init__.py
fsoc_pino/cli/: __init__.py  main.py
fsoc_pino/cli/commands/: __init__.py  benchmark.py  generate_dataset.py  predict.py  train.py
fsoc_pino/data/: __init__.py  generator.py  sampling.py  storage.py
fsoc_pino/models/: __init__.py  fno.py  losses.py  pino.py  training.py
fsoc_pino/simulation/: __init__.py  core.py  physics.py  ssfm.py
fsoc_pino/utils/: __init__.py  logging_utils.py  metrics.py  visualization.py
scripts/: setup_environment.py
tests/: __init__.py  test_simulation.py
